feat: various updates

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,8 +3,8 @@
 # https://sw.kovidgoyal.net/kitty/conf/
 
 # To get a full list of supported fonts use the `kitty +list-fonts` command.
-font_family     MonoLisa Nerd Font
-font_size 12.0
+font_family     IosevkaTerm Nerd Font Mono Regular
+font_size 15.0
 modify_font cell_height 150%
 
 scrollback_lines 8000
@@ -32,9 +32,9 @@ mouse_map ctrl+left press ungrabbed mouse_selection normal
 
 mouse_map right press ungrabbed copy_to_clipboard
 
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
+# remember_window_size  yes
+# initial_window_width  640
+# initial_window_height 400
 
 
 # fat -- One (or optionally more) windows are shown full width on the top, the rest of the windows are shown side-by-side on the bottom
